[package]
name        = "nucleus"
description = "The nucleus is responsible for managing the lifecycle of ~Home-Urbit (https://github.com/odyslam/home-urbit)"
homepage    = "https://github.com/odyslam/home-urbit-nucleus"
authors     = ["odysseas.eth"]
version     = "0.1.0"
edition     = "2021"
license     = "GPL-3.0-only"




[build-dependencies]
vergen = { version = "6.0.0", default-features = false, features = [
    "build",
    "rustc",
    "git",
] }


[dependencies]
actix-web = "4"
actix-files = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.2"
clap = { version = "3.0.10", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }

clap_complete = "3.0.4"
